fix: make toggle focus only visible for keyboard navigation

--- a/app/component/toggle.scss
+++ b/app/component/toggle.scss
@@ -76,7 +76,7 @@
     background-color: $primary-color;
   }
 
-  input:focus + .slider {
+  input:focus-visible + .slider {
     box-shadow: 0 0 0 2px black;
   }
 
